--- a/catalog-item.html
+++ b/catalog-item.html
@@ -11,7 +11,7 @@
 <body>
   <header class="page-header">
     <nav class="header-navigation">
-      <a class="header-logo">
+      <a href="index.html" class="header-logo">
         <img src="./img/index-logo.svg" width="368" height="153" alt="Логотип барбершопа «Бородинский»">
       </a>
       <ul class="app-navigation">
@@ -38,7 +38,7 @@
       <li class="breadcrumbs-current">Набор для путешествий «baxter of california»</li>
     </ul>
 
-    <section class="img-product">
+    <section class="product-photos">
       <h2 class="visually-hidden">Изображения товара</h2>
       <p class="product-photo-full">
         <img src="./img/product-big.jpg" width="460" height="498" alt="Фото всего набора">
@@ -72,7 +72,7 @@
       </p>
 
       <h3>В набор входят:</h3>
-      <ul>
+      <ul class="kit-list">
         <li>средство для умывания (50 мл)</li>
         <li>увлажняющий крем (50 мл)</li>
         <li>крем для бритья (50 мл)</li>
@@ -93,7 +93,7 @@
 
     <div class="footer-social">
       <b>давайте дружить!</b>
-      <ul>
+      <ul class="social-list">
         <li><a href="#" class="social-vk">вконтакте</a></li>
         <li><a href="#" class="social-fb">фейсбук</a></li>
         <li><a href="#" class="social-inst">инстаграм</a></li>
@@ -106,36 +106,40 @@
     </p>
   </footer>
 
-  <section class="modal-authorization">
+  <section class="modal modal-authorization">
     <h2>Личный кабинет</h2>
-    <p>
+    <p class="login-info">
       введите пожалуйста свой логин и пароль
     </p>
-    <form action="https://echo.htmlacademy.ru" method="post">
+    <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
       <p>
-        <label for="login">логин</label>
-        <input type="text" name="login" id="login" placeholder="логин">
+        <label class="visually-hidden" for="login">логин</label>
+        <input class="login-icon-user"type="text"
+                name="login" id="login" placeholder="логин">
       </p>
       <p>
-        <label for="password">пароль</label>
-        <input type="password" name="password" id="password" placeholder="пароль">
+        <label class="visually-hidden" for="password">пароль</label>
+        <input class="login-icon-password"type="password" 
+                name="password" id="password" placeholder="пароль">
       </p>
-      <p>
-        <label>
-          <input type="checkbox" name="remember" checked>
+      <p class="login-password-info">
+        <label class="login-checkbox">
+          <input class="visually-hidden" type="checkbox" name="remember" checked>
           запомнить меня
         </label>
-        <a href="#">я забыл пароль!</a>
+        <a class="restore" href="#">я забыл пароль!</a>
       </p>
 
-      <button type="submit">вход</button>
+      <button class="button" type="submit">Войти</button>
     </form>
-    <button type="button" class="modal-close">закрыть</button>
+    <button class="modal-close" type="button">Закрыть</button>
   </section>
 
-  <section class="modal-map">
+  <section class="modal modal-map">
     <h2 class="visually-hidden">Где нас найти</h2>
-    <button type="button" class="modal-close">закрыть</button>
+    <button type="button" class="modal-close">
+        <span class="visually-hidden">закрыть</span>
+    </button>
   </section>
 </body>
 
