--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="page-header">
     <nav class="header-navigation">
-      <a class="header-logo">
+      <a href="#" class="header-logo">
         <img src="./img/index-logo.svg" width="368" height="153" alt="Логотип барбершопа «Бородинский»">
       </a>
       <ul class="app-navigation">
@@ -35,7 +35,7 @@
       <h2 class="visually-hidden">Наши преимущества</h2>
 
       <ul class="advantages-list">
-        <lic class="advantage-item">
+        <li class="advantage-item">
           <h3>быстро</h3>
           <p>
             мы делаем свою работу быстро!
@@ -85,11 +85,13 @@
       <a href="#">все новости</a>
     </section>
 
-    <section class="photogallery">
+    <section class="gallery">
       <h2>фотогалерея</h2>
-      <figure><a href="#"><img src="./img/salon-room.jpg" width="286" height="164" alt="интерьер"></a></figure>
-      <button class="photogallery-button-back" type="button">назад</button>
-      <button class="photogallery-button-next" type="button">вперед</button>
+      <figure class="gallery-content">
+        <a href="#"><img src="./img/salon-room.jpg" width="286" height="164" alt="интерьер"></a>
+      </figure>
+      <button class="button gallery-button-back" type="button">назад</button>
+      <button class="button gallery-button-next" type="button">вперед</button>
     </section>
 
     <section class="contacts">
@@ -106,8 +108,8 @@
         сб-вс: с 10:00 до 19:00
       </p>
 
-      <a href="#" class="address-map">как проехать</a>
-      <a href="#" class="feedback">обратная связь</a>
+      <a href="#" class="button">как проехать</a>
+      <a href="#" class="button">обратная связь</a>
     </section>
 
     <section class="appointment">
@@ -118,24 +120,24 @@
         с вами для подтверждения брони
       </p>
 
-      <form action="https://echo.htmlacademy.ru" method="post">
-        <p>
+      <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
+        <p class="appointment-item">
           <label for="date-field">дата</label>
           <input type="text" name="date" id="date-field" placeholder="08.10.2017">
         </p>
-        <p>
+        <p class="appointment-item">
           <label for="time-field">время</label>
           <input type="text" name="time" id="time-field" placeholder="10:00">
         </p>
-        <p>
+        <p class="appointment-item">
           <label for="name-field">имя</label>
           <input type="text" name="name" id="name-field" placeholder="Борода">
         </p>
-        <p>
+        <p class="appointment-item">
           <label for="phone-field">телефон</label>
           <input type="tel" name="phone" id="phone-field" placeholder="+7 123 456-78-90">
         </p>
-        <button type="submit">отправить</button>
+        <button class="button" type="submit">Отправить</button>
       </form>
     </section>
   </main>
@@ -150,7 +152,7 @@
 
     <div class="footer-social">
       <b>давайте дружить!</b>
-      <ul>
+      <ul class="social-list">
         <li><a href="#" class="social-vk">вконтакте</a></li>
         <li><a href="#" class="social-fb">фейсбук</a></li>
         <li><a href="#" class="social-inst">инстаграм</a></li>
@@ -163,36 +165,40 @@
     </p>
   </footer>
 
-  <section class="modal-authorization">
+  <section class="modal modal-authorization">
     <h2>Личный кабинет</h2>
-    <p>
+    <p class="login-info">
       введите пожалуйста свой логин и пароль
     </p>
-    <form action="https://echo.htmlacademy.ru" method="post">
+    <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
       <p>
-        <label for="login">логин</label>
-        <input type="text" name="login" id="login" placeholder="логин">
+        <label class="visually-hidden" for="login">логин</label>
+        <input class="login-icon-user"type="text"
+               name="login" id="login" placeholder="логин">
       </p>
       <p>
-        <label for="password">пароль</label>
-        <input type="password" name="password" id="password" placeholder="пароль">
+        <label class="visually-hidden" for="password">пароль</label>
+        <input class="login-icon-password"type="password" 
+               name="password" id="password" placeholder="пароль">
       </p>
-      <p>
-        <label>
-          <input type="checkbox" name="remember" checked>
+      <p class="login-password-info">
+        <label class="login-checkbox">
+          <input class="visually-hidden" type="checkbox" name="remember" checked>
           запомнить меня
         </label>
-        <a href="#">я забыл пароль!</a>
+        <a class="restore" href="#">я забыл пароль!</a>
       </p>
 
-      <button type="submit">вход</button>
+      <button class="button" type="submit">Войти</button>
     </form>
-    <button type="button" class="modal-close">закрыть</button>
+    <button class="modal-close" type="button">Закрыть</button>
   </section>
 
-  <section class="modal-map">
+  <section class="modal modal-map">
     <h2 class="visually-hidden">Где нас найти</h2>
-    <button type="button" class="modal-close">закрыть</button>
+    <button type="button" class="modal-close">
+        <span class="visually-hidden">закрыть</span>
+    </button>
   </section>
 </body>
 
