--- a/index.html
+++ b/index.html
@@ -14,21 +14,26 @@
       <a class="header-logo">
         <img src="./img/index-logo.svg" width="368" height="153" alt="Логотип барбершопа «Бородинский»">
       </a>
-      <ul class="app-navigation">
-        <li><a href="#">информация</a></li>
-        <li><a href="#">новости</a></li>
-        <li><a href="price.html">прайс-лист</a></li>
-        <li><a href="catalog.html">магазин</a></li>
-        <li><a href="#">контакты</a></li>
-      </ul>
 
-      <ul class="user-navigation">
-        <li><a href="#">вход</a></li>
-      </ul>
+      <div class="header-navigation-wrapper">
+        <div class="container">
+          <ul class="app-navigation">
+            <li><a href="#">информация</a></li>
+            <li><a href="#">новости</a></li>
+            <li><a href="price.html">прайс-лист</a></li>
+            <li><a href="catalog.html">магазин</a></li>
+            <li><a href="#">контакты</a></li>
+          </ul>
+
+          <ul class="user-navigation">
+            <li><a href="#">вход</a></li>
+          </ul>
+        </div>
+      </div>
     </nav>
   </header>
 
-  <main>
+  <main class="container">
     <h1 class="visually-hidden">магазин "Barbershop"</h1>
 
     <section class="advantages">
@@ -91,8 +96,10 @@
         <figure class="gallery-content">
           <a href="./img/salon-room.jpg"><img src="./img/salon-room.jpg" width="286" height="164" alt="интерьер"></a>
         </figure>
-        <button class="button gallery-button-back" type="button">назад</button>
-        <button class="button gallery-button-next" type="button">вперед</button>
+        <p class="buttuns-galery">
+          <button class="button gallery-button-back" type="button">назад</button>
+          <button class="button gallery-button-next" type="button">вперед</button>
+        </p>
       </section>
     </div>
 
@@ -147,26 +154,28 @@
   </main>
 
   <footer class="page-footer">
-    <p class="footer-contacts">
-      барбершоп «бородинский»<br>
-      адрес: г.санкт-петербург, б.конюшенная, д.19/8<br>
-      <a href="#">Как нас найти?</a><br>
-      телефон: +7 (495) 666-02-66
-    </p>
+    <div class="container">
+      <p class="footer-contacts">
+          барбершоп «бородинский»<br>
+          адрес: г.санкт-петербург, б.конюшенная, д.19/8<br>
+          <a href="#">Как нас найти?</a><br>
+          телефон: +7 (495) 666-02-66
+        </p>
 
-    <div class="footer-social">
-      <b>давайте дружить!</b>
-      <ul class="social-list">
-        <li><a href="#" class="social-button">вконтакте</a></li>
-        <li><a href="#" class="social-button">фейсбук</a></li>
-        <li><a href="#" class="social-button">инстаграм</a></li>
-      </ul>
+        <div class="footer-social">
+          <b>давайте дружить!</b>
+          <ul class="social-list">
+            <li><a href="#" class="social-button"><span class="visually-hidden">вконтакте</span></a></li>
+            <li><a href="#" class="social-button"><span class="visually-hidden">фейсбук</span></a></li>
+            <li><a href="#" class="social-button"><span class="visually-hidden">инстаграм</span></a></li>
+          </ul>
+        </div>
+
+        <p class="footer-copyright">
+          <b>Разработано</b>
+          <a class="button" href="https://htmlacademy.ru/">html academy</a>
+        </p>
     </div>
-
-    <p class="footer-copyright">
-      <b>Разработано</b>
-      <a class="button" href="https://htmlacademy.ru/">html academy</a>
-    </p>
   </footer>
 
   <section class="modal modal-authentication">
